--- a/callback.html
+++ b/callback.html
@@ -4,28 +4,16 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
     <body>
-
         <button>Hide</button>
-
         <p>Un poco de contenido</p>
-
         <script>
-
             $(document).ready(() => {
-
                 $("button").on("click", () => {
-
                     $("p").hide(4000, () => {
-
-                        alert('Elemento ocultado');
-
+                        $("p").css("color", "pink").show(2000);
                     });
-                    
-                    
-                })
-
+                });
             });
-
         </script>
     </body>
 </html>
